deploy/main/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pay-web
spec:
  selector:
    app: pay-web
  ports:
    - name: http-80
      port: 80
      targetPort: 80
