deploy/main/templates/destinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: pay-web-dr
spec:
  host: pay-web
  subsets:
    - name: v1
      labels:
        app: pay-web
